# border-collie

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CMakeModules/: ShaderCompile.cmake
src/: .clang-format  CMakeLists.txt
src/common/: CMakeLists.txt  alignment.h  assert.h  common_types.h  file_util.cpp  file_util.h  log.cpp  log.h  pfr_helper.hpp  ranges.h  scope_exit.h  temp_ptr.h
src/core/: CMakeLists.txt  scene.cpp  scene.h  vulkan_path_tracer_hw.cpp  vulkan_path_tracer_hw.h  vulkan_rasterizer.cpp  vulkan_rasterizer.h  vulkan_renderer.cpp  vulkan_renderer.h
src/core/gltf/: gltf.h  gltf_container.cpp  gltf_container.h  json_helpers.hpp  simdjson.h
src/core/path_tracer_hw/: vulkan_path_tracer_hw.cpp  vulkan_path_tracer_hw.h
src/core/path_tracer_hw/shaders/: path_tracer_glsl.h  pbr_metallic_roughness.glsl  pbr_metallic_roughness.inl.glsl  pbr_metallic_roughness_importance_sampling.glsl  ray_common.glsl  raytrace.rchit  raytrace.rgen  raytrace.rmiss  rng.glsl  sampling.glsl  srgb.glsl  vertex_attributes.inl.glsl
src/core/rasterizer/: vulkan_rasterizer.cpp  vulkan_rasterizer.h
src/core/rasterizer/shaders/: rasterizer.frag  rasterizer.vert  test.vert
src/core/renderer/: vulkan_allocator.cpp  vulkan_allocator.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_context.cpp  vulkan_device.cpp  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_helpers.cpp  vulkan_helpers.hpp  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_raii_helpers.hpp  vulkan_rasterizer.cpp  vulkan_rasterizer.h  vulkan_renderer.cpp  vulkan_renderer.h  vulkan_renderer_core.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_swapchain.h  vulkan_texture.cpp  vulkan_texture.h
src/core/renderer/shaders/: postprocessing.frag  postprocessing.vert  test.vert
src/core/scene/: primitive.h  scene.h
src/core/scene/object/: mesh.h  object.h
src/core/shaders/: postprocessing.frag  renderer_glsl.h  scene_glsl.h  test.frag  test.vert
src/core/shaders/raytracing_hw/: raytrace.rchit  raytrace.rgen
src/core/vulkan/: host_glsl_shared.h  vulkan_accel_structure.cpp  vulkan_accel_structure.h  vulkan_allocator.cpp  vulkan_allocator.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_context.cpp  vulkan_context.h  vulkan_descriptor_sets.cpp  vulkan_descriptor_sets.h  vulkan_device.cpp  vulkan_device.h  vulkan_frames_in_flight.hpp  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_helpers.cpp  vulkan_helpers.hpp  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_raytracing_pipeline.cpp  vulkan_raytracing_pipeline.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_swapchain.cpp  vulkan_texture.cpp  vulkan_texture.h
src/frontend_glfw/: CMakeLists.txt  border_collie.manifest  border_collie.rc  main.cpp
